Fix output component scrolling and layout
Since the timegraph-output-component creates two trees that each have
their own scrollbar, remove the scroll overflow from the parent
output-component-tree.

Add scrollable wrapper to the xy-output-component and
datatree-output-component trees. Make the timegraph-output-component
wrappers scrollable.

Set the main-output-component overflow to hidden to prevent the
timegraph-output-component markers tree from overflowing when the output
area is too small.

Remove the tree scroll synchronization from the parent class
AbstractTreeOutputComponent and instead add it to the only tree that
needs it, the timegraph tree.

Fix tree width calculation in AbstractTreeOutputComponent.

Fix markers layer height calculation to ignore scrollbar height when the
tree is collapsed.

Remove filler row from markers tree and chart when the model is empty.

Remove arbitrary main area width from abstract-output-component.

--- a/packages/react-components/style/output-components-style.css
+++ b/packages/react-components/style/output-components-style.css
@@ -37,16 +37,20 @@
 
 .main-output-container {
     display: flex;
+    overflow: hidden;
 }
 
 .output-component-tree {
-    overflow-y: scroll;
     white-space: pre-wrap;
 }
 
 .output-component-chart {
     align-self: center;
     text-align: center;
+}
+
+.scrollable {
+    overflow: auto;
 }
 
 #timegraph-main {
